--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -1,31 +1,33 @@
+
 global_defs {
-  router_id K8S_MASTER
-  enable_script_security
+    
+    router_id LVS_DEVEL
 }
+
 
 vrrp_script chk_haproxy {
-  script "{{ k8s_ha_health_check_script }}"
-  interval 2
-  weight 20
+    script "killall -0 haproxy"
+    interval 2
+    weight 2
 }
 
+
 vrrp_instance VI_1 {
-  state {{ 'MASTER' if inventory_hostname == groups['k8s_control_plane'][0] else 'BACKUP' }}
-  interface {{ k8s_ha_interface }}
-  virtual_router_id {{ k8s_ha_router_id }}
-  priority {{ 101 if inventory_hostname == groups['k8s_control_plane'][0] else 100 }}
-  advert_int 1
+    state {{ 'MASTER' if inventory_hostname == k8s_ha_master_node else 'BACKUP' }}
+    interface {{ k8s_bridge_name }}.{{ k8s_public_vlan_id }}
+    virtual_router_id {{ k8s_ha_virtual_router_id }}
+    priority {{ 150 if inventory_hostname == k8s_ha_master_node else 100 }}
+    advert_int 1
+    authentication {
+        auth_type PASS
+        auth_pass {{ vault.k8s_ha_vrrp_pass }}
+    }
 
-  authentication {
-    auth_type PASS
-    auth_pass k8s_secure_pass
-  }
+    virtual_ipaddress {
+        {{ k8s_ha_api_vip }}/32 dev {{ k8s_bridge_name }}.{{ k8s_public_vlan_id }}
+    }
 
-  virtual_ipaddress {
-    {{ k8s_ha_api_vip }}/24
-  }
-
-  track_script {
-    chk_haproxy
-  }
+    track_script {
+        chk_haproxy
+    }
 }
