--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -1,14 +1,15 @@
-
 global_defs {
-    
     router_id LVS_DEVEL
+    enable_script_security
+    max_auto_priority
 }
 
 
 vrrp_script chk_haproxy {
-    script "killall -0 haproxy"
+    script "/usr/bin/killall -0 haproxy"
     interval 2
     weight 2
+    user root
 }
 
 
