--- a/templates/kubeadm-config.yaml.j2
+++ b/templates/kubeadm-config.yaml.j2
@@ -1,28 +1,30 @@
 ---
-apiVersion: kubeadm.k8s.io/v1beta4
+apiVersion: kubeadm.k8s.io/v1beta3
 kind: InitConfiguration
-localAPIEndpoint:
-  advertiseAddress: "{{ k8s_private_ip }}"
-  bindPort: {{ k8s_api_server_port }}
 nodeRegistration:
-  criSocket: unix:///var/run/containerd/containerd.sock
-  imagePullPolicy: IfNotPresent
-  imagePullSerial: true
-  kubeletExtraArgs:
-    - name: node-ip
-      value: "{{ k8s_private_ip }}"
+  name: "{{ inventory_hostname }}"
+  criSocket: "unix:///var/run/containerd/containerd.sock"
+  taints: []
+localAPIEndpoint:
+  advertiseAddress: "{{ kubernetes_private_vlan_ip }}"
+  bindPort: {{ kubernetes_apiserver_advertise_port }}
 ---
-apiVersion: kubeadm.k8s.io/v1beta4
+apiVersion: kubeadm.k8s.io/v1beta3
 kind: ClusterConfiguration
-kubernetesVersion: "v{{ k8s_version }}.{{ k8s_version_minor }}"
-controlPlaneEndpoint: "{{ k8s_ha_api_vip }}:{{ k8s_ha_api_port }}"
-networking:
-  podSubnet: "10.244.0.0/16" # Cilium default
-  serviceSubnet: "10.96.0.0/12" # Kubernetes default 
+kubernetesVersion: v{{ kubernetes_version }}.{{ kubernetes_version_minor }}
+controlPlaneEndpoint: "{{ kubernetes_private_vlan_ip }}:{{ kubernetes_apiserver_advertise_port }}"
 apiServer:
   certSANs:
-    - "{{ k8s_ha_api_vip }}"
+  - "{{ kubernetes_private_vlan_ip }}"
+networking:
+  podSubnet: "{{ kubernetes_pod_network.cidr }}"
+  serviceSubnet: "{{ kubernetes_service_cidr | default('10.96.0.0/12') }}"
+  dnsDomain: "cluster.local"
+etcd:
+  local:
+    dataDir: /var/lib/etcd
 ---
 apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration
-{{ k8s_kubelet_config | to_nice_yaml(indent=2) }}
+cgroupDriver: "systemd"
+failSwapOn: true
